<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PreviewView">

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="283dp"
        android:layout_height="67dp"
        android:layout_marginStart="52dp"
        android:backgroundTint="@color/foreground_1"
        android:text="@string/button_edit"
        android:textColor="@color/white_1"
        app:icon="@drawable/ic_edit"
        app:iconPadding="0dp"
        app:iconTint="@color/white_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

    <Button
        android:id="@+id/btnProcess"
        android:layout_width="283dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/foreground_1"
        android:text="@string/button_process"
        android:textColor="@color/white_1"
        app:icon="@drawable/ic_process"
        app:iconPadding="0dp"
        app:iconTint="@color/white_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_preview"
        android:textColor="@color/white_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        tools:text="@string/title_preview" />

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="381dp"
        android:layout_height="384dp"
        android:contentDescription="@string/cd_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>