<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MenuView">

    <ImageView
        android:id="@+id/ivCapture"
        android:layout_width="149dp"
        android:layout_height="150dp"
        android:contentDescription="@string/cd_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="283dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/foreground_1"
        android:text="@string/button_camera"
        android:textColor="@color/white_1"
        app:icon="@drawable/ic_camera"
        app:iconPadding="0dp"
        app:iconTint="@color/white_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="283dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/foreground_1"
        android:text="@string/button_gallery"
        android:textColor="@color/white_1"
        app:icon="@drawable/ic_gallery"
        app:iconPadding="0dp"
        app:iconTint="@color/white_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />
</androidx.constraintlayout.widget.ConstraintLayout>